fixed toggle button layout issue

--- a/style.css
+++ b/style.css
@@ -167,11 +167,7 @@ header {
   background-color: var(--toggle-bg);
   border-radius: 50px;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 2px;
-  gap: 1px;
+  padding-top: 2px;
 }
 
 .screen {
